<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".paciente.HomePacienteActivity">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/bungee_inline"
        android:text="PregnantPro+"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/btnInformacionPersonalGinecologa"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@color/colorBtn"
        android:fontFamily="@font/basic"
        android:text="@string/informacion_personal"
        android:textSize="@dimen/text_size_button"
        app:icon="@drawable/ic_informacion_personal"
        app:iconGravity="top"
        app:iconSize="@dimen/icon_size"
        app:layout_constraintBottom_toTopOf="@+id/btnRecetasGine"
        app:layout_constraintEnd_toStartOf="@+id/btnResultadosGinecologa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView" />

    <Button
        android:id="@+id/btnResultadosGinecologa"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="180dp"
        android:layout_height="119dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:fontFamily="@font/basic"
        android:text="@string/evolucion"
        android:textSize="@dimen/text_size_button"
        app:icon="@drawable/ic_mi_embarazo"
        app:iconGravity="top"
        app:iconSize="@dimen/icon_size"
        app:layout_constraintBottom_toTopOf="@+id/btnEcografias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnInformacionPersonalGinecologa"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView" />

    <Button
        android:id="@+id/btnRecetasGine"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/basic"
        android:text="@string/planificacion_citas"
        android:textSize="@dimen/text_size_button"
        app:icon="@drawable/ic_iplanificacion_citas"
        app:iconGravity="top"
        app:iconSize="@dimen/icon_size"
        app:layout_constraintBottom_toBottomOf="@+id/btnEcografias"
        app:layout_constraintEnd_toStartOf="@+id/btnEcografias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInformacionPersonalGinecologa" />

    <Button
        android:id="@+id/btnEcografias"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="176dp"
        android:layout_height="119dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="500dp"
        android:layout_weight="1"
        android:fontFamily="@font/basic"
        android:text="@string/ecografias"
        android:textSize="@dimen/text_size_button"
        app:icon="@drawable/ic_ecografia"
        app:iconGravity="top"
        app:iconSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRecetasGine"
        app:layout_constraintTop_toBottomOf="@+id/btnResultadosGinecologa" />

    <Button
        android:id="@+id/btnRecomendaciones"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:fontFamily="@font/basic"
        android:text="@string/recomendaciones"
        android:textSize="@dimen/text_size_button"
        app:icon="@drawable/ic_recomendaciones"
        app:iconGravity="top"
        app:iconSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnResultados"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecetasGine"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnResultados"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="176dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="1"
        android:fontFamily="@font/basic"
        android:text="@string/resultados"
        android:textSize="@dimen/text_size_button"
        app:icon="@drawable/ic_resultados"
        app:iconGravity="top"
        app:iconSize="@dimen/icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRecomendaciones"
        app:layout_constraintTop_toBottomOf="@+id/btnEcografias"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRecetas"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="176dp"
        android:layout_height="106dp"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="58dp"
        android:layout_weight="1"
        android:background="@color/colorBtn"
        android:fontFamily="@font/basic"
        android:text="RECETAS"
        android:textSize="@dimen/text_size_button"
        app:icon="@drawable/receta"
        app:iconGravity="top"
        app:iconSize="@dimen/icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnResultados"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/btnRecomendaciones"
        app:layout_constraintTop_toBottomOf="@+id/btnRecomendaciones" />

    <ImageButton
        android:id="@+id/btnVolver"
        android:layout_width="81dp"
        android:layout_height="77dp"
        android:layout_marginStart="325dp"
        android:layout_marginTop="554dp"
        android:backgroundTint="@color/colorFondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_cerrar_sesion"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>

